--- a/html/miscellaneous/B/Books/index.html
+++ b/html/miscellaneous/B/Books/index.html
@@ -230,7 +230,15 @@ Python Programming.
 
 <!-- ------------ ------------ 2011 ------------ --------------- -->
 
-
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Norman Matloff (2011). Art of R Programming. A Tour of Statistical Software Design
+<a href = "https://nostarch.com/artofr.htm" target = "_blank">
+    https://nostarch.com/
+</a>
+</td><td>
+Programming, R
+</td></tr>
 
 
 
@@ -336,7 +344,14 @@ Statistics, Python Programming.
 Data Science, R.
 </td></tr>
 
-
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Dave Fancher (2014). Book of F#. Breaking Free with Managed Functional Programming
+<a href = "https://nostarch.com/fsharp" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+Programming, Functional programming, F#, .NET
+</td></tr>
 
 
 
@@ -365,6 +380,36 @@ Python Programming.
 </td><td>
 Operating Systems
 </td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Stephen A. Thomas (2015). Data Visualization with JavaScript
+<a href = "https://nostarch.com/datavisualization" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+Data visualization, JavaScript
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Alex Reinhart (2015). Statistics Done Wrong. The Woefully Complete Guide
+<a href = "https://nostarch.com/statsdonewrong" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+Statistics, errors, misconceptions.
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Amit Saha (2015). Doing Math with Python. Use Programming to Explore Algebra, Statistics, Calculus, and More!
+<a href = "https://nostarch.com/doingmathwithpython" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+Mathematics, Python, Algebra, Statistics, Calculus.
+</td></tr>
+
 
 
 
@@ -485,6 +530,16 @@ Go Programming, Web Applications.
 Go Programming.
 </td></tr>
 
+<!-- --------------------------- -->
+
+<tr><td></td><td>
+    Tilman M. Davies (2016). Book of R. A First Course in Programming and Statistics
+<a href = "https://nostarch.com/bookofr" target = "_blank">
+    https://nostarch.com/
+</a>
+</td><td>
+Python Programming, Statistics.
+</td></tr>
 
 
 
@@ -631,6 +686,25 @@ C Programming.
 Python Programming.
 </td></tr>
 
+<!-- --------------------------- -->
+
+<tr><td></td><td>
+    Eric Matthes (2019). Python Flash Cards. Syntax, Concepts, and Examples
+<a href = "https://nostarch.com/pythonflashcards" target = "_blank">
+    https://nostarch.com/
+</a>
+</td><td>
+Python Programming.
+</td></tr>
+
+<tr><td></td><td>
+    Lam Thuy Vo (2019). Mining Social Media. Finding Stories in Internet Data
+<a href = "https://nostarch.com/miningsocialmedia" target = "_blank">
+    https://nostarch.com/
+</a>
+</td><td>
+Python, Social Media.
+</td></tr>
 
 <!-- --------------------------- -->
 
@@ -641,6 +715,28 @@ Python Programming.
 </a>
 </td><td>
 C++ Programming.
+</td></tr>
+
+<!-- --------------------------- -->
+
+<tr><td></td><td>
+    Will Kurt (2019). Bayesian Statistics the Fun Way. Understanding Statistics and Probability with Star Wars, LEGO, and Rubber Ducks
+<a href = "https://nostarch.com/learnbayes" target = "_blank">
+    https://nostarch.com/
+</a>
+</td><td>
+Bayesian statistics
+</td></tr>
+
+<!-- --------------------------- -->
+
+<tr><td></td><td>
+    Peter Farrell (2019). Math Adventures with Python. An Illustrated Guide to Exploring Math with Code
+<a href = "https://nostarch.com/mathadventures" target = "_blank">
+    https://nostarch.com/
+</a>
+</td><td>
+Mathematics, Python.
 </td></tr>
 
 
@@ -1115,19 +1211,53 @@ Scala programming, Object-Oriented Programming, Functional Programming.
 Python Programming, Data Structures, Information Retrieval.
 </td></tr>
 
+
+
 <!-- --------------------------- -->
 <tr><td></td><td>
-    Bob Plantz (2020). Introduction to Computer Organization. An Under the Hood Look at Hardware and x86-64 Assembly
-<a href = "https://nostarch.com/introcomporg" target = "_blank">
+    Yuli Vasiliev (2022). Python for Data Science.  A Hands-On Introduction
+<a href = "https://nostarch.com/python-data-science" target = "_blank">
     https://nostarch.com/
 </a></td><td>
-    Computers, x86-64 Assembly.
+    Python, data science.
 </td></tr>
 
 
 <!-- --------------------------- -->
 <tr><td></td><td>
-    Bob Plantz (2020). Introduction to Computer Organization. An Under the Hood Look at Hardware and x86-64 Assembly
+    Lee Vaughan (2022). Python Tools for Scientists. An Introduction to Using Anaconda, JupyterLab, and Python's Scientific Libraries
+<a href = "https://nostarch.com/python-tools-scientists" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+    Python, data science, Anaconda, JupyterLab.
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Adam Schroeder, Christian Mayer, and Ann Marie Ward (2022). The Book of Dash. Build Dashboards with Python and Plotly
+<a href = "https://nostarch.com/book-dash" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+    Python, Plotly, Pandas, data visualization.
+</td></tr>
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Anthony DeBarros (2022). Practical SQL, 2nd Edition.  A Beginner’s Guide to Storytelling with Data
+<a href = "https://nostarch.com/practical-sql-2nd-edition" target = "_blank">
+    https://nostarch.com/
+</a></td><td>
+    SQL
+</td></tr>
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bob Plantz (2022). Introduction to Computer Organization. An Under the Hood Look at Hardware and x86-64 Assembly
 <a href = "https://nostarch.com/introcomporg" target = "_blank">
     https://nostarch.com/
 </a></td><td>
@@ -1377,13 +1507,46 @@ Programming.
     Allen B. Downey (2023). Modeling and Simulation in Python
 <a href = "https://greenteapress.com/wp/modsimpy/" target = "_blank">
     https://greenteapress.com
+</a>, <a href = "https://nostarch.com/modeling-and-simulation-python" target = "_blank">
+    https://nostarch.com/
 </a>
 
 </td><td>
 Python Programming, Modeling, Simulation.
 </td></tr>
 
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bradford Tuckfield (2023). Dive Into Data Science. Use Python to Tackle Your Toughest Business Challenges
+<a href = "https://nostarch.com/dive-data-science" target = "_blank">
+    https://nostarch.com/
+</a>
 
+</td><td>
+Python Programming, data science.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Rick Silva (2023). MySQL Crash Course. A Hands-on Introduction to Database Development
+<a href = "https://nostarch.com/mysql-crash-course" target = "_blank">
+    https://nostarch.com/
+</a>
+
+</td><td>
+MySQL database.
+</td></tr>
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Colleen M. Farrelly and Yaé Ulrich Gaba (2023). The Shape of Data. Geometry-Based Machine Learning and Data Analysis in R
+<a href = "https://nostarch.com/shapeofdata" target = "_blank">
+    https://nostarch.com/
+</a>
+
+</td><td>
+R programming, Machine Learning, Geometry.
+</td></tr>
 
 <!-- --------------------------- -->
 <tr><td></td><td>
