--- a/html/institutions/index.html
+++ b/html/institutions/index.html
@@ -36,11 +36,11 @@
         <div>
 
             <p>
-                I have been trained and I have been working within different institutions, in <a href = "../../html/institutions/Belgium/index.html">Belgium</a>, <a href = "../../html/institutions/Canada/index.html">Canada</a>, <a href = "../../html/institutions/Italy/index.html">Italy</a> and the <a href = "../../html/institutions/USA/index.html">USA</a>. They are listed here, along with the projects and outcomes (publications, software, etc.) I've been involved in.
+                I have been trained and I have worked within different institutions, in <a href = "../../html/institutions/Belgium/index.html">Belgium</a>, <a href = "../../html/institutions/Canada/index.html">Canada</a>, <a href = "../../html/institutions/Italy/index.html">Italy</a> and the <a href = "../../html/institutions/USA/index.html">USA</a>. They are listed here, along with the projects and outcomes (publications, software, etc.) I've been involved in.
             </p>
 
 
-            <br /><signature> — 11 November 2023</signature>
+            <br /><signature> — 15 November 2023</signature>
         </div>
     </body>
 </html>
