--- a/html/miscellaneous/E/Erasmus/adages/ubi_bene_ibi_patria.html
+++ b/html/miscellaneous/E/Erasmus/adages/ubi_bene_ibi_patria.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body class="w3-container w3-auto w3-section w3-mobile">
-        <a href="/miscellaneous/E/Erasmus/adages/ubi_bene_ibi_patria.html"><img src="../../../../../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
+        <a href="../../../../../html/miscellaneous/E/Erasmus/adages/ubi_bene_ibi_patria.html"><img src="../../../../../img/Ubi_bene_ibi_patria_logo.jpg" /></a>
 
 		<ul class="site_menu">
             <li><a href = "../../../../../index.html">Home</a></li>
@@ -69,7 +69,7 @@
 
 
 <p>
-The photo at the top of this page was taken in the philosophical garden of the Erasmus House in Anderlecht.
+The photo at the top of this page was taken in the philosophical garden of the Erasmus House in Anderlecht, in Belgium.
 
 It features almond-shaped ponds designed by Belgian artist Marie-Jo Lafontaine.
 
