--- a/html/events/index.html
+++ b/html/events/index.html
@@ -73,7 +73,7 @@
                   <td>14 NOV 2023</td>
                   <td>Brussels</td>
                   <td>Study day entitled « Recidive en criminele carrière: het digitale erfgoed van het strafrecht ten dienste van justitie actoren / Récidive et carrières criminelles : le patrimoine numérique de la justice pénale au service des acteurs de la justice » ( Recidivism and criminal careers: the digital heritage of criminal justice at the service of justice professionals )</td>
-                  <td>Speech entitled « Ontwikkeling en werking van een geïntegreerde historische database met behulp van grafieken / Développement et exploitation d’une base de donnée historique intégrée au moyen de graphes » ( Development and operation of a historical database integrated by way of graphs )</td>
+                  <td>Speech entitled « Ontwikkeling en werking van een geïntegreerde historische database met behulp van grafen / Développement et exploitation d’une base de donnée historique intégrée au moyen de graphes » ( Development and operation of a historical database integrated by way of graphs )</td>
                 </tr>
                 <tr>
                   <td></td>
