--- a/html/miscellaneous/P/Python/index.html
+++ b/html/miscellaneous/P/Python/index.html
@@ -89,6 +89,22 @@
                     <b>Learn Python on Zenva</b>: <a href = "https://academy.zenva.com/product-category/all/coding/python/" target = "_blank">https://academy.zenva.com/</a> 
                  </li>
 
+
+                 <li>
+                     <b>Computer Science Circles</b>: <a href = "https://cscircles.cemc.uwaterloo.ca/" target = "_blank">https://cscircles.cemc.uwaterloo.ca/</a> (basics of Python programming @ University of Waterloo)
+
+                     <ul>
+                        <li>
+                            <b>Python from Scratch</b>: <a href = "https://open.cs.uwaterloo.ca/python-from-scratch/" target = "_blank">https://open.cs.uwaterloo.ca/python-from-scratch/</a> (videos)
+                        </li>
+
+
+                        <li>
+                            <b>Online Python Tutor</b>: <a href = "hhttps://cscircles.cemc.uwaterloo.ca/visualize" target = "_blank">https://cscircles.cemc.uwaterloo.ca/visualize</a> (useful to visualize code execution)
+                        </li>
+                     </ul>
+                  </li>
+
                  <li>
                     Practical information: <a href = "../../../../html/miscellaneous/P/Python/how_to.html">How to</a>
                   </li>
