--- a/html/miscellaneous/B/books/index.html
+++ b/html/miscellaneous/B/books/index.html
@@ -91,6 +91,27 @@
 </tr>
 
 
+<!-- ------------ ------------ 1952 ------------ --------------- -->
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bertrand Russell (1952). The Impact of Science on Society.
+<a href = "https://www.routledge.com/The-Impact-of-Science-on-Society/Russell/p/book/9781138641150" target = "_blank">
+    https://www.routledge.com/
+</a>
+
+</td><td>
+Science, Philosophy, Religion, Politics.
+</td></tr>
+
+
+
+
+
+
+
+
+
 <!-- ------------ ------------ 1999 ------------ --------------- -->
 
 <!-- --------------------------- -->
@@ -244,6 +265,20 @@ Python Programming.
 </a>
 </td><td>
 Programming, R
+</td></tr>
+
+
+
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Robert Sedgewick & Kevin Wayne (2011). Algorithms. 4th Edition. Addison Wesley.
+<a href = "https://algs4.cs.princeton.edu/home/" target = "_blank">
+    https://algs4.cs.princeton.edu
+</a>
+</td><td>
+Programming, Algorithms, Java.
 </td></tr>
 
 
@@ -1505,6 +1540,18 @@ Programming.
 
 
 <!-- ------------ ------------ 2023 ------------ --------------- -->
+
+
+<!-- --------------------------- -->
+<tr><td></td><td>
+    Bertrand Russell (2023). L'impact de la science. Promesses et périls. [French translation of <i>The Impact of Science on Society</i> by William Perrenoud. Revised and edited by Normand Baillargeon et Chantal Santerre in 2023]
+<a href = "https://www.editions-baconniere.ch/fr/catalogue/limpact-de-la-science" target = "_blank">
+    https://www.editions-baconniere.ch/
+</a>
+
+</td><td>
+Science, Philosophy, Religion, Politics.
+</td></tr>
 
 
 
