L'impact de la science. Promesses et périls

--- a/html/miscellaneous/B/books/index.html
+++ b/html/miscellaneous/B/books/index.html
@@ -1544,7 +1544,7 @@ Programming.
 
 <!-- --------------------------- -->
 <tr><td></td><td>
-    Bertrand Russell (2023). L'impact de la science. Promesses et périls. [French translation of <i>The Impact of Science on Society</i> by William Perrenoud. Revised and edited by Normand Baillargeon et Chantal Santerre in 2023]
+    Bertrand Russell (2023). L'impact de la science. Promesses et périls. Éditions La Baconnière [French translation of <i>The Impact of Science on Society</i> by William Perrenoud. Revised and edited by Normand Baillargeon & Chantal Santerre in 2023]
 <a href = "https://www.editions-baconniere.ch/fr/catalogue/limpact-de-la-science" target = "_blank">
     https://www.editions-baconniere.ch/
 </a>
