--- a/html/miscellaneous/R/Bertrand_Russell/index.html
+++ b/html/miscellaneous/R/Bertrand_Russell/index.html
@@ -78,10 +78,20 @@
             <br />
 
             <p>
-                <blockquote cite="hhttps://www.facebook.com/russellbertie/posts/pfbid02gREuiFphqDAZuEWrp8VV2kpm2c3jnrrK1Z1Yjd19e4BRkQWDQTESdi1v1DJVytDrl">
-                    <q>And so, to those tempted by despair, I say: Remind yourself that the world is what we make it, and that to the making of it each one of us can contribute something. This thought makes hope possible: and in this hope, though life will still be painful, it will be no longer purposeless.</q> — Bertrand Russell, The Wisdom of Bertrand Russell, A Philosophy for You in These Times (1941), p. 56
+                <blockquote cite="https://www.facebook.com/russellbertie/posts/pfbid02gREuiFphqDAZuEWrp8VV2kpm2c3jnrrK1Z1Yjd19e4BRkQWDQTESdi1v1DJVytDrl">
+                    <q>And so, to those tempted by despair, I say: Remind yourself that the world is what we make it, and that to the making of it each one of us can contribute something. This thought makes hope possible: and in this hope, though life will still be painful, it will be no longer purposeless.</q> — Bertrand Russell, The Wisdom of Bertrand Russell, A Philosophy for You in These Times (1941), p. 56.
                     </blockquote> 
             </p>
+
+            <p>
+                <blockquote cite="https://www.editions-baconniere.ch/fr/catalogue/limpact-de-la-science">
+                    <q>L'espèce humaine a survécu jusqu'ici par suite de l'ignorance et de l'incompétence; mais si la connaissance et la compétence sont associées à la folie, il ne saurait plus être certain que nous survivrons.</q> — Bertrand Russell, L'impact de la science. Promesses et périls (1952, édition 2023).
+                </blockquote> 
+            </p>
+
+           
+
+
             <p>
                 <ul>
                     <li>
@@ -146,7 +156,7 @@
 
 <!-- --------------------------- -->
 <tr><td></td><td>
-    Bertrand Russell (2023). L'impact de la science. Promesses et périls. [French translation of <i>The Impact of Science on Society</i> by William Perrenoud. Revised and edited by Normand Baillargeon et Chantal Santerre in 2023]
+    Bertrand Russell (2023). L'impact de la science. Promesses et périls. Éditions La Baconnière [French translation of <i>The Impact of Science on Society</i> by William Perrenoud. Revised and edited by Normand Baillargeon & Chantal Santerre in 2023]
 <a href = "https://www.editions-baconniere.ch/fr/catalogue/limpact-de-la-science" target = "_blank">
     https://www.editions-baconniere.ch/
 </a>
