--- a/html/events/index.html
+++ b/html/events/index.html
@@ -43,6 +43,8 @@
             <h2 class = "big">Upcoming and current events</h2>
 
             <table>
+
+
                 <tr>
                   <th>ID</th>
                   <th>Start</th>
@@ -51,14 +53,10 @@
                   <th>Event</th>
                   <th>Involvement</th>
                 </tr>
-                <tr>
-                  <td></td>
-                  <td>18 SEP 2023</td>
-                  <td>12 NOV 2023</td>
-                  <td>Louvain-la-Neuve</td>
-                  <td>Course entitled « LLSMS2903 – Digital Transformation Management / LLSMF2903 – Digital Business Systems »</td>
-                  <td>Teaching assistant</td>
-                </tr>
+
+
+
+
                 <tr>
                   <td></td>
                   <td>18 SEP 2023</td>
@@ -67,26 +65,81 @@
                   <td>Course entitled « LINGE1225 - Programmation en Economie et Gestion » ( Programming in Economics and Management )</td>
                   <td>Teaching assistant</td>
                 </tr>
-                <tr>
-                  <td></td>
-                  <td>14 NOV 2023</td>
-                  <td>14 NOV 2023</td>
-                  <td>Brussels</td>
-                  <td>Study day entitled « Recidive en criminele carrière: het digitale erfgoed van het strafrecht ten dienste van justitie actoren / Récidive et carrières criminelles : le patrimoine numérique de la justice pénale au service des acteurs de la justice » ( Recidivism and criminal careers: the digital heritage of criminal justice at the service of justice professionals )</td>
-                  <td>Speech entitled « Ontwikkeling en werking van een geïntegreerde historische database met behulp van grafen / Développement et exploitation d’une base de donnée historique intégrée au moyen de graphes » ( Development and operation of a historical database integrated by way of graphs )</td>
-                </tr>
+
+
+
                 <tr>
                   <td></td>
                   <td>30 JAN 2024</td>
                   <td>30 JAN 2024</td>
                   <td>Brussels</td>
-                  <td>NICC Seminar</td>
-                  <td>Speech entitled « L'usage de la théorie des graphes en criminalistique et en criminologie: études de cas » ( The use of graph theory in forensics and criminology: case studies )</td>
+                  <td>Speech entitled « L'usage de la théorie des graphes en criminalistique et en criminologie: études de cas » ( The use of graph theory in forensics and criminology: case studies ) at the NICC Seminar, NICC, Brussels.</td>
+                  <td>Speaker</td>
                 </tr>
+
+
+
               </table>
             
 
-            <br /><signature> — 7 October 2023</signature>
+
+
+
+
+
+              <h2 class = "big">Past events</h2>
+
+              <table>
+  
+  
+                  <tr>
+                    <th>ID</th>
+                    <th>Start</th>
+                    <th>End</th>
+                    <th>Where</th>
+                    <th>Event</th>
+                    <th>Involvement</th>
+                  </tr>
+  
+  
+  
+
+  
+                  <tr>
+                    <td></td>
+                    <td>17 NOV 2023</td>
+                    <td>17 NOV 2023</td>
+                    <td>Brussels</td>
+                    <td>Speech entitled « Integrated Historical Database (IHD). Méthodes, contenu, résultats. »  ( Integrated Historical Database (IHD). Methods, content, results. ) at a CReCC research meeting, NICC, Brussels.</td>
+                    <td>Speaker</td>
+                  </tr>
+  
+  
+  
+                  <tr>
+                    <td></td>
+                    <td>14 NOV 2023</td>
+                    <td>14 NOV 2023</td>
+                    <td>Brussels</td>
+                    <td>Speech entitled « Ontwikkeling en werking van een geïntegreerde historische database met behulp van grafen / Développement et exploitation d’une base de donnée historique intégrée au moyen de graphes » ( Development and operation of a historical database integrated by way of graphs ) at the Study day entitled « Recidive en criminele carrière: het digitale erfgoed van het strafrecht ten dienste van justitie actoren / Récidive et carrières criminelles : le patrimoine numérique de la justice pénale au service des acteurs de la justice » ( Recidivism and criminal careers: the digital heritage of criminal justice at the service of justice professionals ), Brussels.</td>
+                    <td>Speaker</td>
+                  </tr>
+  
+  
+                  <tr>
+                    <td></td>
+                    <td>18 SEP 2023</td>
+                    <td>12 NOV 2023</td>
+                    <td>Louvain-la-Neuve</td>
+                    <td>Course entitled « LLSMS2903 – Digital Transformation Management / LLSMF2903 – Digital Business Systems »</td>
+                    <td>Teaching assistant</td>
+                  </tr>
+  
+  
+  
+                </table>
+
+            <br /><signature> — 18 November 2023</signature>
         </div>
     </body>
 </html>
