--- a/html/miscellaneous/L/Linux/initramfs_error.html
+++ b/html/miscellaneous/L/Linux/initramfs_error.html
@@ -176,7 +176,7 @@ Inspect the content of the folder.
     
 <code>sudo rm /boot/*$version*</code>
 
-<h4>Complete the original upgrade now that we have enough space</h4>
+<h4>Complete the original upgrade</h4>
 
 <p>We can do this because now we have enough space</p> 
 
