--- a/html/miscellaneous/P/Python/index.html
+++ b/html/miscellaneous/P/Python/index.html
@@ -89,6 +89,9 @@
                     <b>Learn Python on Zenva</b>: <a href = "https://academy.zenva.com/product-category/all/coding/python/" target = "_blank">https://academy.zenva.com/</a> 
                  </li>
 
+                 <li>
+                    <b>LINGE1225 - Python (INGInious)</b>: <a href = "https://inginious.info.ucl.ac.be/course/LINGE1225-Python" target = "_blank">https://inginious.info.ucl.ac.be/</a> (Programmation en Economie et Gestion) 
+                 </li>
 
                  <li>
                      <b>Computer Science Circles</b>: <a href = "https://cscircles.cemc.uwaterloo.ca/" target = "_blank">https://cscircles.cemc.uwaterloo.ca/</a> (basics of Python programming @ University of Waterloo)
@@ -100,7 +103,7 @@
 
 
                         <li>
-                            <b>Online Python Tutor</b>: <a href = "hhttps://cscircles.cemc.uwaterloo.ca/visualize" target = "_blank">https://cscircles.cemc.uwaterloo.ca/visualize</a> (useful to visualize code execution)
+                            <b>Online Python Tutor</b>: <a href = "https://cscircles.cemc.uwaterloo.ca/visualize" target = "_blank">https://cscircles.cemc.uwaterloo.ca/visualize</a> (useful to visualize code execution)
                         </li>
                      </ul>
                   </li>
