--- a/html/institutions/Belgium/UCLouvain/index.html
+++ b/html/institutions/Belgium/UCLouvain/index.html
@@ -49,7 +49,7 @@
             </p>
 
             <p>
-                I am a <a href="https://uclouvain.be/en/directories/patrick.jeuniaux" target="_blank">teaching assistant</a> in charge of supporting courses on information systems within the Operations and Information Systems Department (<a href="https://uclouvain.be/en/faculties/lsm/professors-core-faculty.html#OIS" target="_blank">OIS</a>) of the Louvain Research Institute in Management and Organizations (<a href="https://uclouvain.be/en/research-institutes/lourim" target="_blank">LouRIM</a>) at the Louvain School of Management (<a href="https://uclouvain.be/fr/facultes/lsm" target="_blank">LSM</a>) of <a href="https://uclouvain.be" target="_blank">UCLouvain</a>.
+                I am a <a href="https://uclouvain.be/en/directories/patrick.jeuniaux" target="_blank">teaching assistant</a> in charge of supporting courses on information systems within the Operations and Information Systems Department (<a href="https://uclouvain.be/en/faculties/lsm/professors-core-faculty.html#OIS" target="_blank">OIS</a>) of the Louvain Research Institute in Management and Organizations (<a href="https://uclouvain.be/en/research-institutes/lourim" target="_blank">LouRIM</a>; see <a href="https://www.youtube.com/@lourimuclouvainresearchins2801" target="_blank">https://www.youtube.com/</a>) at the Louvain School of Management (<a href="https://uclouvain.be/fr/facultes/lsm" target="_blank">LSM</a>) of <a href="https://uclouvain.be" target="_blank">UCLouvain</a>.
             </p>
             
             
