--- a/html/projects/Be-Gen/index.html
+++ b/html/projects/Be-Gen/index.html
@@ -45,14 +45,16 @@
 
         <h1 class = "big">Be-Gen</h1>
 
+        <h2 class = "big">Understanding the operational, strategic, and political implications of the National Genetic Database</h2>
 
         <div>
 
             <p>
-                
+                <a href= "https://nicc.fgov.be/be-gen" target = "_blank">https://nicc.fgov.be/be-gen</a>
             </p>
+
             
-            <br /><signature> — 7 October 2023</signature>
+            <br /><signature> — 28 November 2023</signature>
 
         </div>
 
