--- a/html/events/index.html
+++ b/html/events/index.html
@@ -62,7 +62,7 @@
                   <td>18 SEP 2023</td>
                   <td>24 DEC 2023</td>
                   <td>Louvain-la-Neuve</td>
-                  <td>Course entitled « LINGE1225 - Programmation en Economie et Gestion » ( Programming in Economics and Management )</td>
+                  <td>Course entitled « LINGE1225 - Programmation en Economie et Gestion » ( Programming in Economics and Management ), at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a></td>
                   <td>Teaching assistant</td>
                 </tr>
 
@@ -73,7 +73,7 @@
                   <td>30 JAN 2024</td>
                   <td>30 JAN 2024</td>
                   <td>Brussels</td>
-                  <td>Speech entitled « L'usage de la théorie des graphes en criminalistique et en criminologie: études de cas » ( The use of graph theory in forensics and criminology: case studies ) at the NICC Seminar, NICC, Brussels.</td>
+                  <td>Speech entitled « L'usage de la théorie des graphes en criminalistique et en criminologie: études de cas » ( The use of graph theory in forensics and criminology: case studies ) at the <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a> Seminar, <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>, Brussels.</td>
                   <td>Speaker</td>
                 </tr>
 
@@ -110,11 +110,11 @@
                     <td>17 NOV 2023</td>
                     <td>17 NOV 2023</td>
                     <td>Brussels</td>
-                    <td>Speech entitled « Integrated Historical Database (IHD). Méthodes, contenu, résultats. »  ( Integrated Historical Database (IHD). Methods, content, results. ) at a CReCC research meeting, NICC, Brussels.</td>
+                    <td>Speech entitled « Integrated Historical Database (IHD). Méthodes, contenu, résultats. »  ( Integrated Historical Database (IHD). Methods, content, results. ) at a  <a href = "../../html/institutions/Belgium/NICC/CReCC.html">CReCC</a> research meeting, <a href = "../../html/institutions/Belgium/NICC/index.html">NICC</a>, Brussels.</td>
                     <td>Speaker</td>
                   </tr>
   
-  
+                 
   
                   <tr>
                     <td></td>
@@ -131,7 +131,7 @@
                     <td>18 SEP 2023</td>
                     <td>12 NOV 2023</td>
                     <td>Louvain-la-Neuve</td>
-                    <td>Course entitled « LLSMS2903 – Digital Transformation Management / LLSMF2903 – Digital Business Systems »</td>
+                    <td>Course entitled « LLSMS2903 – Digital Transformation Management / LLSMF2903 – Digital Business Systems », at <a href = "../../html/institutions/Belgium/UCLouvain/index.html">UCLouvain</a></td>
                     <td>Teaching assistant</td>
                   </tr>
   
