--- a/html/miscellaneous/E/index.html
+++ b/html/miscellaneous/E/index.html
@@ -53,7 +53,7 @@
             <li><a href = "../../../html/miscellaneous/Z/index.html">Z</a></li>
 		</ul>
         <ul class="site_menu">
-            <li><a href = "../../../html/miscellaneous/E/Erasmus/index.html">Eramus</a></li>
+            <li><a href = "../../../html/miscellaneous/E/Erasmus/index.html">Erasmus</a></li>
         </ul>
 
         <h1 class = "big">E</h1>
@@ -61,7 +61,7 @@
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 29 November 2023</signature>
 
         </div>
 
