--- a/html/institutions/Belgium/NICC/index.html
+++ b/html/institutions/Belgium/NICC/index.html
@@ -37,7 +37,11 @@
             <li><a href = "../../../../html/institutions/Belgium/NICC/index.html" class = "selected">NICC</a></li>
 		</ul>
 
-  
+        <ul class="site_menu">
+        <li><a href = "../../../../html/institutions/Belgium/NICC/CReCC.html">CReCC</a></li>
+        </ul>
+
+
 	<div>
 
         <p>
@@ -49,7 +53,7 @@
         </p>
         
         <p>
-            I am a <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">researcher</a> in the criminology department (<a href="https://incc.fgov.be/criminologie" target="_blank">CRIM</a>) at the National Institute for Criminalistics and Criminology (<a href="https://incc.fgov.be" target="_blank">NICC</a>).
+            I am a <a href="https://incc.fgov.be/jeuniaux-patrick" target="_blank">researcher</a> in the Research Unit on Recidivism and Criminal Careers (<a href = "../../../../html/institutions/Belgium/NICC/CReCC.html">CReCC</a>) in the criminology department (<a href="https://incc.fgov.be/criminologie" target="_blank">CRIM</a>) at the National Institute for Criminalistics and Criminology (<a href="https://incc.fgov.be" target="_blank">NICC</a>).
         </p>
     
         <p>
