--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
 
 
 <p>
-    I am the designer and developer of the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>, a <a href = "html/miscellaneous/G/Graphs/index.html">graph</a>-based computer system originally created to facilitate the integration of data originating from different criminal justice databases.
+    I am the designer and developer of the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>, a computer system created to store datasets extracted from different criminal justice databases, and facilitate their preservation and exploitation.
 </p>  
 
 <p>
     Research projects I am working on are <a href = "html/projects/FAR/index.html">FAR</a>, <a href = "html/projects/IIHA/index.html">IIHA</a>, <a href = "html/projects/REGUIDE/index.html">REGUIDE</a>, <a href = "html/projects/DOT/index.html">DOT</a>, and <a href = "html/projects/MJE/index.html">MJE</a>.
 </p>
 
+
 <p>
-    In general, I am interested by science and humanities, and in doing so I rely a lot on <a href = "html/miscellaneous/C/Computer Science/index.html">computers</a>. I love reflecting on ideas and reading <a href = "html/miscellaneous/B/books/index.html">books</a>, and I developed a passion for the work of several authors (e.g., <a href = "html/miscellaneous/E/Erasmus/index.html">Erasmus</a>, <a href = "html/miscellaneous/R/Bertrand_Russell/index.html">Bertrand Russell</a>).
+    In general, I am interested by science and humanities, and in doing so I rely a lot on <a href = "html/miscellaneous/C/Computer Science/index.html">computers</a>. Topics of particular interests to me are <a href = "html/miscellaneous/P/Python/index.html">Python</a> programming and <a href = "html/miscellaneous/G/Graphs/index.html">graphs</a>. I love reflecting on ideas and reading <a href = "html/miscellaneous/B/books/index.html">books</a>, and I developed a passion for the work of several authors (e.g., <a href = "html/miscellaneous/E/Erasmus/index.html">Erasmus</a>, <a href = "html/miscellaneous/R/Bertrand_Russell/index.html">Bertrand Russell</a>).
 </p>
 
 <p>
@@ -65,7 +66,7 @@
 
 
 
-<br /><signature> — 11 November 2023</signature>
+<br /><signature> — 2 December 2023</signature>
         </div>
     </body>
 </html>
