--- a/html/miscellaneous/I/IHD/index.html
+++ b/html/miscellaneous/I/IHD/index.html
@@ -69,10 +69,15 @@
         <div>
 
             <p>
-                Computer system aimed at facilitating the integration of data extracted from different databases. It is programmed in <a href = "../../../../html/miscellaneous/P/Python/index.html">Python</a> and can be used to turn datasets into a <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a> graph database. It was originally developed to tackle particular issues in analyzing data originating from criminal justice databases, as part of the <a href = "../../../../html/projects/IIHA/index.html">IIHA</a> project. A first version of the system was developed as part of the <a href = "../../../../html/projects/FAR/index.html">FAR</a> project.
+                The Integrated Historical Database (IHD) is a computer system which helps with preserving datasets and facilitating their exploitation. It is library of <a href = "../../../../html/miscellaneous/P/Python/index.html">Python</a> programs that turn datasets into a <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a> <a href = "../../../../html/miscellaneous/G/Graphs/index.html">graph</a> database. Once the database has been created, the data originated from different sources can be integrated through record linkage.
             </p>
+
+            <p>
+                It was originally developed to tackle particular issues in analyzing data originating from criminal justice databases, as part of the <a href = "../../../../html/projects/IIHA/index.html">IIHA</a> project. A first version of the system was developed as part of the <a href = "../../../../html/projects/FAR/index.html">FAR</a> project. 
+            </p>
+
             
-            <br /><signature> — 18 October 2023</signature>
+            <br /><signature> — 2 December 2023</signature>
 
         </div>
 
