--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
 <p>
-    I am the designer and developer of the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>, a computer system created to store datasets extracted from different criminal justice databases, and facilitate their preservation and exploitation.
+    I am the designer and developer of the <a href = "html/miscellaneous/I/IHD/index.html">Integrated Historical Database (IHD)</a>, a computer system created to store datasets extracted from different sources, and facilitate their preservation and exploitation.
 </p>  
 
 <p>
