--- a/html/miscellaneous/I/IHD/index.html
+++ b/html/miscellaneous/I/IHD/index.html
@@ -69,7 +69,7 @@
         <div>
 
             <p>
-                The Integrated Historical Database (IHD) is a computer system which helps with preserving datasets and facilitating their exploitation. It is library of <a href = "../../../../html/miscellaneous/P/Python/index.html">Python</a> programs that turn datasets into a <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a> <a href = "../../../../html/miscellaneous/G/Graphs/index.html">graph</a> database. Once the database has been created, the data originated from different sources can be integrated through record linkage.
+                The Integrated Historical Database (IHD) is a computer system which helps preserving datasets and facilitates their exploitation. It is a library of <a href = "../../../../html/miscellaneous/P/Python/index.html">Python</a> programs that turn datasets into a <a href = "../../../../html/miscellaneous/N/Neo4j/index.html">Neo4j</a> <a href = "../../../../html/miscellaneous/G/Graphs/index.html">graph</a> database. Once the database has been created, the data that originated from different sources can be integrated through record linkage.
             </p>
 
             <p>
