--- a/html/projects/index.html
+++ b/html/projects/index.html
@@ -32,7 +32,7 @@
             <li><a href = "../../html/projects/DOT/index.html">DOT</a></li>
             <li><a href = "../../html/projects/FAR/index.html">FAR</a></li>
             <li><a href = "../../html/projects/IIHA/index.html">IIHA</a></li>
-            <li><a href = "../../html/projects/MJE/index.html">MJE</a></li>
+            <li><a href = "../../html/projects/MJ/index.html">MJ</a></li>
             <li><a href = "../../html/projects/PIES/index.html">PIES</a></li><br />
             <li><a href = "../../html/projects/REGUIDE/index.html">REGUIDE</a></li>
             <li><a href = "../../html/projects/UBIMOL/index.html">UBIMOL</a></li>
@@ -60,8 +60,8 @@
                 <!-- MJ -->
                 <tr>
                     <td></td>
-                    <td><a href = "../../html/projects/MJE/index.html">MJE</a></td>
-                    <td>Maisons de Justice - Effects</td>
+                    <td><a href = "../../html/projects/MJ/index.html">MJ</a></td>
+                    <td>Maisons de Justice</td>
                     <td>French Speaking Belgian Government</td>
                     <td>?? €</td>
                     <td>2023</td>
@@ -214,7 +214,7 @@
 
             
 
-            <br /><signature> — 9 November 2023</signature>
+            <br /><signature> — 9 December 2023</signature>
         </div>
     </body>
 </html>
