--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </p>  
 
 <p>
-    Research projects I am working on are <a href = "html/projects/FAR/index.html">FAR</a>, <a href = "html/projects/IIHA/index.html">IIHA</a>, <a href = "html/projects/REGUIDE/index.html">REGUIDE</a>, <a href = "html/projects/DOT/index.html">DOT</a>, and <a href = "html/projects/MJE/index.html">MJE</a>.
+    Research projects I am working on are <a href = "html/projects/FAR/index.html">FAR</a>, <a href = "html/projects/IIHA/index.html">IIHA</a>, <a href = "html/projects/REGUIDE/index.html">REGUIDE</a>, <a href = "html/projects/DOT/index.html">DOT</a>, and <a href = "html/projects/MJ/index.html">MJ</a>.
 </p>
 
 
