--- a/html/miscellaneous/E/Erasmus/index.html
+++ b/html/miscellaneous/E/Erasmus/index.html
@@ -24,7 +24,7 @@
             <li><a href = "../../../../html/projects/index.html">Projects</a></li>
             <li><a href = "../../../../html/events/index.html">Events</a></li>
             <li><a href = "../../../../html/publications/index.html">Publications</a></li>
-            <li><a href = "../../../../html/miscellaneous/index.html"  class = "selected">Miscellaneous</a></li>
+            <li><a href = "../../../../html/miscellaneous/index.html" class = "selected">Miscellaneous</a></li>
             <li><a href = "../../../../html/contact.html">Contact</a></li>
 		</ul>
 
@@ -78,10 +78,16 @@
 
 <p>
 
+    <ul>
+        <li>
+            La folie est-elle raisonnable ? <a href = "https://www.radiofrance.fr/franceculture/podcasts/avec-philosophie/la-folie-est-elle-raisonnable-5077757" target = "_blank">https://www.radiofrance.fr/franceculture</a> (Géraldine Muhlmann, Blandine Perona & Virginie Leroux, 15 Novembre 2023)
+        </li>
+    </ul>
+
 
 </p>
 
-<br /><signature> — 10 November 2023</signature>
+<br /><signature> — 9 December 2023</signature>
 
 </div>
 
