--- a/html/miscellaneous/D/index.html
+++ b/html/miscellaneous/D/index.html
@@ -55,6 +55,7 @@
 
         <ul class="site_menu">
             <li><a href = "../../../html/miscellaneous/D/data/index.html">data</a></li>
+            <li><a href = "../../../html/miscellaneous/D/Dutch/index.html">Dutch</a></li>
 		</ul>
 
 
@@ -63,7 +64,7 @@
         <div>
 
 
-            <br /><signature> — 16 September 2023</signature>
+            <br /><signature> — 11 December 2023</signature>
 
         </div>
 
