--- a/html/miscellaneous/L/index.html
+++ b/html/miscellaneous/L/index.html
@@ -54,7 +54,9 @@
         </ul>
 
         <ul class="site_menu">
+            <li><a href = "../../../html/miscellaneous/L/languages/index.html">Languages</a></li>
             <li><a href = "../../../html/miscellaneous/L/LaTeX/index.html">LaTeX</a></li>
+            <li><a href = "../../../html/miscellaneous/L/linguistics/index.html">Linguistics</a></li>
             <li><a href = "../../../html/miscellaneous/L/Linux/index.html">Linux</a></li>
             <li><a href = "../../../html/miscellaneous/L/literature/index.html">Literature</a></li>
         </ul>
