--- a/html/miscellaneous/L/Linux/index.html
+++ b/html/miscellaneous/L/Linux/index.html
@@ -60,7 +60,9 @@
 
 
 		<ul class="site_menu">
+            <li><a href = "../../../../html/miscellaneous/L/languages/index.html">Languages</a></li>
             <li><a href = "../../../../html/miscellaneous/L/LaTeX/index.html">LaTeX</a></li>
+            <li><a href = "../../../../html/miscellaneous/L/linguistics/index.html">Linguistics</a></li>
             <li><a href = "../../../../html/miscellaneous/L/Linux/index.html"class = "selected">Linux</a></li>
             <li><a href = "../../../../html/miscellaneous/L/literature/index.html">Literature</a></li>
 		</ul>
