--- a/html/miscellaneous/D/Dutch/index.html
+++ b/html/miscellaneous/D/Dutch/index.html
@@ -77,6 +77,10 @@
                         <b>Huis van het Nederlands</b>: <a href = "https://www.huisnederlandsbrussel.be/" target = "_blank">https://www.huisnederlandsbrussel.be/</a>
                     </li>
 
+                    <li>
+                        <b>Het Kruispunt</b>: <a href = "https://hetkruispunt258967713.wordpress.com/" target = "_blank">https://hetkruispunt258967713.wordpress.com/</a>
+                    </li>
+
                 </ul>
 
                 
