--- a/html/miscellaneous/V/Visual Studio Code/index.html
+++ b/html/miscellaneous/V/Visual Studio Code/index.html
@@ -85,7 +85,10 @@
                 </li>
 
 
-
+                <li>
+                    <b>Getting started with Visual Studio Code</b>: <a href = "https://code.visualstudio.com/docs/introvideos/basics" target = "_blank">https://code.visualstudio.com/</a> 
+                 </li>
+ 
 
                 <li>
                   Practical information: <a href = "../../../../html/miscellaneous/V/Visual Studio Code/how_to.html">How to</a>
