--- a/html/miscellaneous/C/Cpp/index.html
+++ b/html/miscellaneous/C/Cpp/index.html
@@ -116,7 +116,7 @@
                 </li>
 
                 <li>
-                    <b>GameDev.tv C++ course</b>: <a href = "https://gitlab.com/GameDevTV/CPPCourse" target = "_blank">https://gitlab.com//a>  
+                    <b>GameDev.tv C++ course</b>: <a href = "https://gitlab.com/GameDevTV/CPPCourse" target = "_blank">https://gitlab.com/</a>  
                 </li>
 
                 
